--- a/site-plan.css
+++ b/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css?family=Roboto|Open+Sans&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: #381D2A;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: 'Open Sans', sans-serif;
+  --paragraph-font: 'Roboto', sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
@@ -34,7 +34,7 @@ body {
   margin: 0 auto;
   padding: 4em;
   font-size: 18px;
-  text-align: center;
+  text-align: center !important;
 }
 img {
   display: block;
@@ -43,6 +43,7 @@ img {
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
   color: var(--headline-color-on-white);
+  text-align: center;
 }
 h2 {
   text-align: center;
@@ -66,6 +67,7 @@ p {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color-on-white);
   padding: 1em;
+  text-align: center !important;
 }
 .colors {
   width: 100%;
@@ -100,25 +102,18 @@ p.colored {
 }
 
 nav {
-  background-color: var(--nav-background-color);
+  background-color: #343a40;
   line-height: 3em;
   text-align: center;
   font-size: 1.2em;
 }
-nav  {
-  list-style-type: none;
-  display: flex;
 
-}
 nav a {
   padding:1em;
   min-width: 120px;
   text-decoration: none;
   padding: 10px;
 
-}
-nav a:link, nav a:visited {
-  color: var(--nav-link-color);
 }
 nav a:hover {
   color: var(--nav-hover-link-color);
@@ -172,4 +167,12 @@ nav a:hover {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+
+.image-wireframe {
+  height: 600px;
+}
+
+.img-port {
+  height: 600px;
 }
